tests/ui/transmutability/unions/extension.stderr
error[E0277]: `MaybeUninit<u8>` cannot be safely transmuted into `[u8; 2]`
  --> $DIR/extension.rs:11:46
   |
LL |     is_maybe_transmutable::<MaybeUninit<u8>, [u8; 2]>();
   |                                              ^^^^^^^ the size of `MaybeUninit<u8>` is smaller than the size of `[u8; 2]`
   |
note: required by a bound in `is_maybe_transmutable`
  --> $DIR/extension.rs:6:16
   |
LL | pub fn is_maybe_transmutable<Src, Dst>()
   |        --------------------- required by a bound in this function
LL |     where Dst: TransmuteFrom<Src, { Assume::VALIDITY.and(Assume::SAFETY) }>
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `is_maybe_transmutable`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
